<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoginDemo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
   <string name="login_user">user</string>
    <string name="login_password">password</string>
       <string name="login_ok">login</string>
       <string name="edit_password">密码</string>
       <string name="edit_name">用户名</string>
       <string name="edit_sex">性别</string>
       <string name="edit_sex_m">男</string>
       <string name="edit_sex_f">女</string>
       <string name="edit_save">保存</string>
</resources>